--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html >
+<html lang="en">
 <head>
-    
+    <meta charset="UTF-8">
+     <title>Naslov</title>
 </head>
 <body>
- <h1>Naslov 2</h1>   
+ <h1>Prvi naslov</h1>  
 </body>
 </html>
