--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-     <title>Naslov</title>
+     <title>Naslov 1</title>
 </head>
 <body>
  <h1>Prvi naslov</h1>  
